--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -34,19 +34,29 @@
 
   .menu-drawer-container {
     display: flex;
-  }
-
-  .list-menu {
+    justify-content: center;   /* Centers the menu horizontally */
+    align-items: center;       /* Centers the menu vertically */
+    text-align: center;        /* Centers text if needed */
+    flex-direction: column;    /* Aligns items in a column if needed */
+    }
+    
+  .list-menu--inline {
+    display: flex;
+    justify-content: center;   /* Centers the menu items horizontally */
+    flex-wrap: wrap;           /* Allows wrapping if the menu items exceed the width */
     list-style: none;
     padding: 0;
     margin: 0;
-  }
+    }
 
-  .list-menu--inline {
-    display: inline-flex;
-    flex-wrap: wrap;
-  }
-
+/* .list-menu--inline ul {
+    display: flex;
+    justify-content: left;   /* Centers the menu items horizontally */
+    flex-wrap: wrap;           /* Allows wrapping if the menu items exceed the width */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    } */
   summary.list-menu__item {
     padding-right: 2.7rem;
   }
@@ -56,7 +66,11 @@
     align-items: center;
     line-height: calc(1 + 0.3 / var(--font-body-scale));
   }
-
+.list-menu {
+  list-style: none;  /* Removes the bullet points */
+  padding: 0;
+  margin: 0;
+}
   .list-menu__item--link {
     text-decoration: none;
     padding-bottom: 1rem;
@@ -74,7 +88,12 @@
 
 {%- style -%}
   .header {
+    font-weight :600;
     padding: {{ section.settings.padding_top | times: 0.5 | round: 0 }}px 3rem {{ section.settings.padding_bottom | times: 0.5 | round: 0 }}px 3rem;
+    display: flex;
+    justify-content: space-between;  /* Ensures logo is on the left, menu centered, and icons on the right */
+    align-items: center;
+    width: 100%;
   }
 
   .section-header {
