--- a/assets/base copy.css
+++ b/assets/base copy.css
@@ -2773,11 +2773,9 @@ details[open] > .header__submenu {
 
 /* Header menu */
 .header__inline-menu {
-  width: 80%;
-  margin: 0 auto;
-  background: #fff;
-  padding: 50px 0;
-
+  margin-left: -1.2rem;
+  grid-area: navigation;
+  display: none;
 }
 
 .header--top-center .header__inline-menu,
@@ -2808,41 +2806,13 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item {
-  display: inline-block;
-  padding: 15px;
+  padding: 1.2rem;
   text-decoration: none;
-  color: #000000;
-  font-weight: 800;
-  text-transform: uppercase;
-  margin: 0 10px;
-  position: relative; /* Required for the after pseudo-element to work */
-  transition: all 0.5s ease;
-  z-index: 1;
-}
-
-/* Hover effect with background shift */
-.header__menu-item:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  bottom: 0;
-  left: 0;
-  background-color: #000000;
-  visibility: hidden;
-  opacity: 0;
-  transition: all 0.5s ease;
-  z-index: -1;
+  color: rgba(var(--color-foreground), 0.75);
 }
 
 .header__menu-item:hover {
-  color: white;
-}
-
-.header__menu-item:hover:after {
-  opacity: 1;
-  visibility: visible;
-  height: 100%;
+  color: rgb(var(--color-foreground));
 }
 
 .header__menu-item span {
@@ -2875,17 +2845,10 @@ details[open] > .header__menu-item .icon-caret {
 
 .header__menu-item:hover .header__active-menu-item {
   text-decoration-thickness: 0.2rem;
-  color: white;
 }
 
-/* .header__submenu {
-  transition: opacity var(--duration-default) ease, transform var(--duration-default) ease;
-} */
-
 .header__submenu {
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  background: rgba(255, 255, 255, 0.95);
-  padding: 1rem 0;
+  transition: opacity var(--duration-default) ease, transform var(--duration-default) ease;
 }
 
 .global-settings-popup,
@@ -2920,12 +2883,10 @@ details[open] > .header__menu-item .icon-caret {
 
 .header__submenu .header__menu-item:hover {
   text-decoration-line: underline;
-   color: #ffffff;
 }
 
 .header__menu-item .icon-caret {
-  /* right: 0.8rem; */
-  transition: transform 0.5s ease;
+  right: 0.8rem;
 }
 
 .header__submenu .icon-caret {
@@ -3046,9 +3007,6 @@ details-disclosure > details {
     border-radius: 0;
   }
   .content-container--full-width-mobile:after {
-    display: none;
-  }
- .header__inline-menu {
     display: none;
   }
 }
