--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -49,14 +49,15 @@
     margin: 0;
     }
 
-/* .list-menu--inline ul {
+ .list-menu--inline ul {
     display: flex;
     justify-content: left;   /* Centers the menu items horizontally */
     flex-wrap: wrap;           /* Allows wrapping if the menu items exceed the width */
     list-style: none;
     padding: 0;
     margin: 0;
-    } */
+    } 
+
   summary.list-menu__item {
     padding-right: 2.7rem;
   }
@@ -66,11 +67,11 @@
     align-items: center;
     line-height: calc(1 + 0.3 / var(--font-body-scale));
   }
-.list-menu {
-  list-style: none;  /* Removes the bullet points */
-  padding: 0;
-  margin: 0;
-}
+    .list-menu {
+    list-style: none;  /* Removes the bullet points */
+    padding: 0;
+    margin: 0;
+    }
   .list-menu__item--link {
     text-decoration: none;
     padding-bottom: 1rem;
@@ -78,6 +79,8 @@
     line-height: calc(1 + 0.8 / var(--font-body-scale));
   }
 
+
+  
   @media screen and (min-width: 750px) {
     .list-menu__item--link {
       padding-bottom: 0.5rem;
@@ -93,7 +96,7 @@
     display: flex;
     justify-content: space-between;  /* Ensures logo is on the left, menu centered, and icons on the right */
     align-items: center;
-    width: 100%;
+    
   }
 
   .section-header {
@@ -110,7 +113,8 @@
   @media screen and (min-width: 990px) {
     .header {
       padding-top: {{ section.settings.padding_top }}px;
-      padding-bottom: {{ section.settings.padding_bottom }}px;
+      padding-bottom: {{ section.settings.padding_bottom }}px; */
+      
     }
   }
 {%- endstyle -%}
