chore: Update button hover background color
Change the button hover background color from blue to black to improve visual consistency with the rest of the design.

--- a/assets/base.css
+++ b/assets/base.css
@@ -1277,7 +1277,7 @@ button.shopify-payment-button__button--unbranded {
 }
 
 .button:not([disabled]):hover{
-    background-color: blue;
+    background-color: black;
     color: white;
 }
 
