--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -232,12 +232,13 @@
         box-sizing: border-box;
         font-size: calc(var(--font-body-scale) * 62.5%);
         height: 100%;
-      }
-
-      body {
-        display: grid;
-        grid-template-rows: auto auto 1fr auto;
-        grid-template-columns: 100%;
+    }
+    
+    body {
+        display: flex;
+        flex-direction: column;
+        /* grid-template-rows: auto auto 1fr auto;
+        grid-template-columns: 100%; */
         min-height: 100%;
         margin: 0;
         font-size: 1.5rem;
