--- a/assets/component-collection-hero.css
+++ b/assets/component-collection-hero.css
@@ -81,6 +81,23 @@
   .collection-hero__image-container {
     height: 20rem;
   }
+
+  .collection-hero--with-image .collection-hero__text-wrapper {
+    padding: 1rem 1rem 1rem 0;
+    flex-basis: 50%;
+  }
+
+  .collection-hero__title{
+    padding-top: 0.1rem;
+    padding-bottom: 0.1rem;
+    margin-block-end: 0px;
+    margin-block-start: 0px; 
+    margin: 0px;
+    font-size: 2rem;
+    text-align: center;
+    border: red 1px solid;
+  }
+
 }
 
 @media screen and (min-width: 750px) {
