--- a/assets/base.css
+++ b/assets/base.css
@@ -922,6 +922,13 @@ summary::-webkit-details-marker {
     width: 100%;
     max-width: none;
   }
+
+  .title{
+    font-size: 2rem;
+    /* line-height: calc(1 + 0.8 / var(--font-body-scale)); */
+    color: rgba(var(--color-foreground), 1.7);
+    
+  }
 }
 
 .grid--1-col .grid__item {
