chore: Refactor collection hero styles for improved layout and text alignment

--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -3,6 +3,10 @@
     flex: 0 0 100%;
     max-width: 100%;
   }
+  
+  .collection__title {
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 989px) {
