--- a/assets/component-collection-hero.css
+++ b/assets/component-collection-hero.css
@@ -95,7 +95,6 @@
     margin: 0px;
     font-size: 2rem;
     text-align: center;
-    border: red 1px solid;
   }
 
 }
@@ -105,6 +104,10 @@
     padding: 4rem 2rem 4rem 0;
     flex-basis: 50%;
   }
+
+.collection-hero__title{
+    margin: 0px;
+}
 
   .collection-hero__image-container {
     align-self: stretch;
