--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -3,6 +3,8 @@
     height: 100%;
     position: relative;
     text-decoration: none;
+    cursor: pointer;
+    z-index: 10;
 }
 
 .card {
@@ -78,7 +80,6 @@
 .card .card__inner .card__media {
     overflow: hidden;
     /* Fix for Safari border bug on hover */
-    z-index: 0;
     border-radius: calc(var(--border-radius) - var(--border-width) - var(--image-padding));
 }
 
