--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -1,3 +1,12 @@
+.collection {
+  border-radius: 15px;
+  background-color: white;
+}
+
+.gradient{
+    background-color: #010c1e;
+}
+
 @media screen and (max-width: 749px) {
   .collection .grid__item:only-child {
     flex: 0 0 100%;
