--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -69,6 +69,7 @@
 }
 
 @media screen and (max-width: 749px) {
+
     .footer__content-bottom {
         flex-wrap: wrap;
         padding-top: 0;
@@ -109,6 +110,11 @@
 }
 
 @media screen and (min-width: 750px) {
+
+    .footer__content-top{
+        padding-left: 5%;
+    }
+
     .footer__column--info {
         padding-left: 0;
         padding-right: 0;
@@ -159,6 +165,7 @@
 }
 
 @media screen and (min-width: 990px) {
+
     .footer-block__heading {
         font-size: calc(var(--font-heading-scale) * 1.8rem);
     }
@@ -404,6 +411,12 @@
 
     .footer-block__details-content> :first-child .list-menu__item--link {
         padding-top: 0;
+    }
+}
+
+@media screen and (min-width: 1900px) {
+    .footer__content-top {
+        padding-left: 0;
     }
 }
 
