chore: Add auto-generated file warnings to JSON templates and update layout structure for improved clarity

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -313,9 +313,11 @@
 
     {% sections 'header-group' %}
 
+    <div style="background-color:white">
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
+    </div>
 
     {% sections 'footer-group' %}
 
