--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -3,6 +3,7 @@
   grid-template-columns: repeat(2, auto);
   grid-template-rows: repeat(2, auto);
   padding-top: 1rem;
+  padding: 1rem 3rem;
 }
 
 .active-facets-mobile {
